# gcp_scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  MANIFEST.in  README.md  __main__.py  crawl.py  credsdb.py  dwd_sa_details.txt  dwd_sa_detector.py  example_config  main.yml  models.py  pull_request_template.md  pyproject.toml  requirements.txt  scanner.py  setup.py  test_acceptance.py  test_unit.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: github-release.yml  publish.yml  python-app.yml  python-publish.yml  release-please.yml  release.yml  testfile.yml
key/: reddit-b4582-f56c95c6fd6d.json
output/: reddit-b4582-2023-03-31_19-23-02.json
src/gcp_scanner/: __init__.py  __main__.py  argparser.py  arguments.py  conftest.py  crawl.py  credsdb.py  error_handler.py  models.py  scanner.py  test_acceptance.py  test_params.py  test_scanner.py  test_unit.py  utils.py
src/gcp_scanner/client/: __init__.py  appengine_client.py  bigquery_client.py  bigtable_client.py  client_factory.py  cloud_billing_client.py  cloud_functions_client.py  cloud_resource_manager_client.py  cloud_source_manager_client.py  cloud_trace_client.py  cloudasset_client.py  compute_client.py  datastore_client.py  dns_client.py  domains_client.py  filestore_client.py  firestore_client.py  (+10 more)
test/: app_services  bq  cloud_assets  cloud_billing_account  cloud_functions  cloud_traces  cloudstore_instances  compute_disks  compute_images  compute_instances  compute_security_policies  compute_snapshots  datastore_kinds  dns_policies  dns_policies.json  filestore_instances  firestore_collections  firewall_rules  generate_file.py  gke_clusters  gke_images  iam_policy  kms  machine_images  managed_zones  project_info  pubsub_subs  refresh_scopes  registered_domains  service_accounts  services  sourcerepos  spanner_instances  sql_instances  static_ips  storage_buckets  storage_buckets_iam  subnets
test/bootstrap/: app_engine.sh  bigquery.sh  bigtable.sh  cloud_billing.sh  cloudasset.sh  cloudtrace.sh  compute_image.sh  compute_instance.sh  compute_security_policies.sh  compute_snapshots.sh  datastore.sh  dns.sh  filestore.sh  functions.sh  kms.sh  machine_images.sh  managed_zone.sh  pubsub.sh  run.sh  sourcerepos.sh  spanner.sh  sql.sh  storage.sh
visualization_tool/: .eslintrc.cjs  USAGE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
visualization_tool/docs/: DOC.md  USAGE.md
visualization_tool/src/: App.css  App.tsx  index.css  main.tsx
(+110 files in other folders)
