[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "gcp-scanner"
description = "GCP resource scanner that can help determine what level of access certain credentials possess on GCP"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["gcp", "scan", "access", "security-tool", "python"]
license = { text = "Apache License" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyu2f==0.1.5",
    "google-api-python-client==2.80.0",
    "google-cloud-container==2.17.4",
    "google-cloud-iam==2.11.2",
    "httplib2==0.21.0",
    "requests==2.31.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/google/gcp_scanner"

[project.scripts]
gcp-scanner = "gcp_scanner.scanner:main"
gcp-scanner-visualizer = "gcp_scanner.gui.app:main"
